; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_dbus-manager.c_bus_manager_send_reloading.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_dbus-manager.c_bus_manager_send_reloading.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@send_reloading = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"Failed to send reloading signal: %m\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bus_manager_send_reloading(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @assert(i32* %6)
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* @send_reloading, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @INT_TO_PTR(i32 %10)
  %12 = call i32 @bus_foreach_bus(i32* %8, i32* null, i32 %9, i32 %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %2
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @log_debug_errno(i32 %16, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  br label %18

18:                                               ; preds = %15, %2
  ret void
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @bus_foreach_bus(i32*, i32*, i32, i32) #1

declare dso_local i32 @INT_TO_PTR(i32) #1

declare dso_local i32 @log_debug_errno(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
